--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -1,5 +1,19 @@
-.container{
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
+.container {
+  max-width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 20px;
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 90%;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    max-width: 100%;
+    padding: 0 15px;
+  }
 }
