--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -36,6 +36,9 @@
 }
 
 .header__button {
+    display: flex;
+    align-items: center;
+    gap: 10px;
   padding-left: 30px;
   padding-right: 30px;
   padding-top: 5px;
