--- a/src/components/Developers/Developers.css
+++ b/src/components/Developers/Developers.css
@@ -15,16 +15,18 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
   gap: 50px;
 }
 
 .developers__item {
   text-align: center;
-  padding-bottom: 40px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex: 1 1 200px;
+  max-width: 250px;
 }
 
 .developers__avatar {
