--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -8,6 +8,7 @@
   text-align: center;
   padding: 0 15px;
   box-sizing: border-box;
+  background-color: #f0f0f0;
 }
 
 .hero .container {
@@ -46,7 +47,7 @@
 }
 
 .hero__button:hover {
-  background-color: rgb(112, 180, 39);
+  background-color: #444444;
 }
 
 .hero__image {
