--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -230,7 +230,8 @@
 
 .modal-info {
     font-size: 14px;
-    color: #888;
+    color: #0056b3;
+    text-decoration: underline;
     margin-top: 15px;
 }
 
